# SamLang

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  DEPLOY_ALIYUN.md  Dockerfile.backend  Dockerfile.frontend  README.md  config-example.yaml  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  start.bat  start.ps1  test_agent_fix.py
docdocs/: overview.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.css  App.tsx  index.css  main.tsx
scripts/: admins.csv  check_admin.py  check_password.py  debug_admin.py  init_admin.py  init_admins_from_csv.py  migrate_add_user_uuid.py
src/: __init__.py  main.py
src/agent/: __init__.py  agent.py  factory.py  memory.py  planner.py  tools.py
src/api/: __init__.py  admin.py  assistant_conversations.py  assistant_tools.py  auth.py  chat.py  chat_test.py  cold_start.py  conversation.py  reset.py  sse_events.py  test_api.py  token_stats.py  video.py
src/auth/: admin_jwt.py  jwt.py  middleware.py
src/code_start/: README.md  __init__.py  encoder.pkl  formatter.py  predictor.py
src/config/: __init__.py  agent.py  config.py  embedding.py  llm.py  ocr.py  rag.py  rerank.py  skill.py  tool.py
src/db/: __init__.py  admin.py  assistant_conversation.py  conversation.py  message.py  token_stats.py  tools.py  user.py  video.py
src/ocr/: README.md  __init__.py  ocr.py
src/rag/: README.md  __init__.py  rag.py
src/schemas/: __init__.py  auth.py  chat.py  cold_start.py  conversation.py  health.py  reset.py
src/service/: __init__.py  (+1 more)
(+326 files in other folders)
